2003-05-26  Alif Wahid  <awah005@users.sourceforge.net>

	* examples/scribble-gl.py (Scribble.display): Optimised
	execution time by removing redundant method invokations.

2003-05-24  Alif Wahid  <awah005@users.sourceforge.net>

	* examples/scribble-gl.py: Added new example program. This
	one is functionally equivalent to the PyGtk program scribble.py
	but obviously all the drawing here is done using OpenGL.

2003-05-17  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* Version 0.99.0

	* configure.in: Bumped version. Require GtkGLExt 1.0.0.

2003-05-12  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* gtk/gdkgl/gdkglext.override (_wrap_gdk_gl_context_copy):
	* gtk/gdkgl/gdkglext.defs (gdk_gl_context_copy):
	Changed src_glcontext -> src.

	* examples/low-level.py (LowLevelDemo.__unrealize): Destroy
	rendering context explicitly.

2003-05-11  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* Makefile.am (EXTRA_DIST):
	* configure.in:
	* pygtkglext.spec.in: Added RPM spec file.

	* gtk/gtkgl/apputils.py:
	* examples/*.py: Changed '#!/usr/bin/env python2.2' to
	'#!/usr/bin/env python'.

2003-05-10  Alif Wahid  <awah005@users.sourceforge.net>

	* examples/share-lists.py: Added new example program. Another
	mapping from C to Python. Original C program written by Noafumi
	for GtkGLExt.

2003-05-10  Alif Wahid  <awah005@users.sourceforge.net>

	* examples/color.py (ColorManagementDemo.__init__): Put in place
	exception handling. So now if PyGtk raises an exception on not
	being able to allocate a specific colour from the colourmap, we
	just switch to RGB mode rather than staying in Colour Index mode.

	* examples/color.py (ColorManagementDemo.__realize): Prints out
	the OpenGL vendor, renderer, version and extensions strings as
	switching between RGB and Index modes in above case also causes a
	switch in the use of GDI Generic or third party renderers on
	Win32.

2003-05-05  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* Version 0.1.0
