@@ -1,3 +1,9 @@
+2003-07-19  Alif Wahid  <awah005@users.sourceforge.net>
+
+	* examples/button.py: New example program added. Mapped
+	from C to Python. Original program button.c written by
+	Naofumi.
+
 2003-05-26  Alif Wahid  <awah005@users.sourceforge.net>
 
 	* examples/scribble-gl.py (Scribble.display): Optimised
